# lovelaice

./: .gitignore  .gitmodules  .lovelaice.py  AGENTS.md  Code-of-Conduct.md  LICENSE  README.md  Readme.md  app.py  bot.py  bot_help.md  makefile  package-lock.json  package.json  pyproject.toml  requirements.txt  transcription-315811719.txt
.streamlit/: secrets.toml
app/: main.py  playground.py  requirements.txt
client/src/: extension.ts
code-extension/: extension.py  package.json  requirements.txt
extra/vscode-lovelaice/: CHANGELOG.md  README.md  package-lock.json  package.json
extra/vscode-lovelaice/src/: extension.ts
know-how/: writing-a-command.md  writing-a-tool.md
lovelaice/: __init__.py  __main__.py  api.open-meteo.yml  api.py  cli.py  config.py  connectors.py  core.py  models.py  skills.py  tools.py
plans/: 2026-05-06-v1-design.md  2026-05-06-v1-implementation.md
server/: server.py  utils.py
src/lovelaice/: __init__.py  __main__.py  cli.py  config.py  core.py  mcp.py  oneshot.py  security.py  template.py  thinking.py
src/lovelaice/commands/: __init__.py  react.py
src/lovelaice/skills/: basic.py
src/lovelaice/tools/: __init__.py  bash.py  files.py  filesystem.py  search.py  shell.py  web.py
src/lovelaice/tui/: app.py  blocks.py  slash.py  transcript.py
tests/: _fake_openrouter.py  conftest.py  test_cli_e2e.py  test_config.py  test_core_env.py  test_mcp.py  test_oneshot.py  test_parsing.py  test_react.py  test_template_init.py  test_thinking.py  test_tool_bash.py  test_tool_files.py  test_tool_search.py  test_tool_web.py  test_tui_app.py  test_tui_blocks.py  test_tui_cancel.py  test_tui_input.py  test_tui_slash.py  test_workspace_grounding.py
vscode/: extension.js  extension.py  package-lock.json  package.json  requirements.txt
vscode-extension/: .vscodeignore  package.json  pyproject.toml
vscode-extension/server/: __main__.py
