[project]
name = "lovelaice"
version = "1.0.0"
description = "A local-first coding agent for the terminal, with Python-defined commands and tools."
readme = "README.md"
authors = [
    { name = "Alejandro Piad", email = "apiad@apiad.net" }
]
requires-python = ">=3.13"
dependencies = [
    "lingo-ai==1.0",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
    "typer>=0.21.1",
    "textual>=0.85",
    "mcp>=1.2",
    "httpx>=0.28",
    "markdownify>=0.13",
    "readabilipy>=0.3",
    "pathspec>=0.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
lovelaice = "lovelaice.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
